--- a/styles.css
+++ b/styles.css
@@ -2,20 +2,38 @@ body {
     margin: 0px;
     text-align: center;
     background-color: #f5f5f5;
+    /* background-color: white; */
     color: #000000;
 }
 
 #hero {
-    background-image: url("images/jeremy-bishop-HcgK4WoBwzg-unsplash.jpg");
+    background-image: url("images/british-library-Z5glwhD3LH8-unsplash.jpg");
     background-size: cover;
     padding: 270px 0px 270px;
-    text-shadow: 0px 0px 10px black;
     font-size: 23px;
-    color: #ffdc7d;
+    color: #000000;
     border: 8px solid #E3D87E;
-    border-bottom: 10px solid #E3D87E;
-    border-top: 10px solid #E3D87E;
-    background-color: antiquewhite;
+
+    /* border-bottom: 10px solid #E3D87E; */
+    /* border-top: 10px solid #E3D87E; */
+}
+
+.hero-tit {
+    padding-top: 8px;
+    padding-bottom: 10px;
+    background-color: #E3D87E;
+    font-family: "poppins", sans-serif;
+    font-weight: 400;
+    /* text-shadow: 0px 0px 4px rgb(241, 255, 48); */
+}
+
+.hero-titd {
+    /* text-shadow: 0px 0px 4px rgb(241, 255, 48); */
+    padding-top: 8px;
+    padding-bottom: 10px;
+    background-color: #E3D87E;
+    font-family: "poppins", sans-serif;
+    font-weight: 400;
 }
 
 .titles {
@@ -56,7 +74,7 @@ body {
     font-family: "poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    background-image: linear-gradient(#ffd561, #fbff7d, rgb(252, 150, 71));
+    background-image: linear-gradient(#ffd561, #fbff7d);
     padding: 30px;
     border-radius: 20px;
     border-bottom: 5px solid black;    
@@ -140,7 +158,7 @@ body {
     border-radius: 20px;
     margin: 0px;
     padding: 0px;
-    box-shadow: 0px 0px 2px black;
+    box-shadow: 0px 0px 4px black;
 }
 
 .nwfont {
@@ -183,13 +201,17 @@ body {
     padding: 30px;
     display: flex;
     justify-content: space-between;
-    background-image: linear-gradient(rgb(252, 150, 71), #fbff7d);
-    border-radius: 20px;
-    border-bottom: 5px solid black;
+    background-image: linear-gradient(rgb(255, 248, 149), #fbff7d);
+    border-radius: 20px 20px 0px 0px;
+    /* box-shadow: 0px 0px 20px rgb(46, 46, 46); */
+    border: 2px solid black; 
+    border-bottom: 2px solid black;
     font-family: "poppins", sans-serif;
     font-weight: bold;
 }
 /* .card:hover {
+    box-shadow: 0px 0px 20px rgb(46, 46, 46);
+    border: 2px solid black;
     background-image: linear-gradient(#ffd561, #ffdc7d, rgb(252, 150, 71));
 } */
 
@@ -198,7 +220,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+
 }
 
 #dt-guide {
@@ -206,10 +228,12 @@ body {
     flex-direction: column;
     justify-content: space-between;
     text-align: start;
-    border-radius: 20px;
+    border-radius: 0px 0px 20px 20px;
     background-image: linear-gradient(rgb(252, 150, 71), #fbff7d);
     padding: 28px 50px;
+    border: 2px solid black; 
     border-bottom: 5px solid black;
+    width: 660px;
 }
 
 .dt {
@@ -231,22 +255,21 @@ body {
     margin-bottom: 80px;
 }
 
-#card-p {
+/* #card-p {
     border-right: 4px solid #E3D87E;
-    padding-top: 30px;
+    padding-top: 40px;
     padding-right: 13px;
     text-align: left;
     display: flex;
     flex-direction: row;
     justify-content: end;
-    align-items: start;
-}
+    align-items: end;
+} */
 
 #dt-form {
     border-left: 2px solid black;
-    padding-top: 30px;
-    padding-left: 13px;
-    align-items: start ;
+    padding-top: 40px;
+    align-items: center ;
 }
 
 /* #last {
